# android-ndk-and-rustc

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build-example-project.sh
.github/workflows/: ci.yml
c-example-project/: Cargo.toml  build.rs
c-example-project/c/: greeting.c  greeting.h  main.c
cpp-example-project/: build.rs  wrapper.h
cpp-example-project/cpp/: c.cpp  c.h  greeting.cpp  greeting.h  main.cpp
cpp-example-project/src/: lib.rs
