[package]
name = "libgreeting-sys"
version = "0.1.0"
authors = ["Kohei Taniguchi <kohei@chaintope.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.12.3", default-features = false }

[lib]
name = "libgreeting_sys"
path = "src/lib.rs"
crate-type=["lib", "cdylib", "staticlib"]

[dependencies]


[build-dependencies]
cc = { version = "^1.0", features = ["parallel"] }
bindgen = "0.50"